# product-loader

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_05_10_2113-8286b724f917_add_product_and_otherinfo_tables.py  2025_05_10_2207-1a1a031805f2_str_or_none_in_preview_img_field.py  2025_05_10_2232-34b992300c77_add_cascade_delete_in_otherinfo_table.py  2025_05_11_1641-1b15eb7d6c0f_change_title_frield_in_products_table.py  2025_05_12_2132-bc9b5a517df0_unique_guid_field_in_products_table.py
src/: config.py  main.py  schemas.py
src/database/: session.py
src/database/models/: __init__.py  base.py  otherinfo.py  product.py
src/handlers/: __init__.py  parse_stream.py
